12-Cert-Manager-Annotations/ingressHTTP-dnslocal-giropops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-senhas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/limit-rps: "2" # aplicação vai aceitar apenas 2 requisições por segundo
    #nginx.ingress.kubernetes.io/upstream-hash-by: "$request_uri"
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "giropops-cookie"
    #cert-manager.io/cluster-issuer: "letsencrypt-staging" #definir no ingress para usar o cert-manager com cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: giropops-senhas.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: giropops-senhas
            port: 
              number: 5000
